Correction z-index

--- a/css/main.less
+++ b/css/main.less
@@ -158,7 +158,7 @@
   font-family: 'IM Fell French Canon', serif;
   font-style: italic;
   background: url("/img/tutorial-bg.jpg");
-  z-index: -2;
+  z-index: 10;
   display: inline-block;
   position: absolute;
   top: 0;
